--- a/templates/footer.html
+++ b/templates/footer.html
@@ -16,9 +16,9 @@
         <div class="footer-section">
             <h3>Follow Us</h3>
             <ul class="social-links">
-                <li><a href="#"><img src="facebook-icon.png" alt="Facebook"></a></li>
-                <li><a href="#"><img src="twitter-icon.png" alt="Twitter"></a></li>
-                <li><a href="#"><img src="instagram-icon.png" alt="Instagram"></a></li>
+                <li><a href="#"><img src="https://img.icons8.com/?size=100&id=5MQ0gPAYYx7a&format=png&color=000000" alt="Facebook"></a></li>
+                <li><a href="#"><img src="https://img.icons8.com/?size=100&id=13912&format=png&color=000000" alt="Twitter"></a></li>
+                <li><a href="#"><img src="https://img.icons8.com/?size=100&id=Xy10Jcu1L2Su&format=png&color=000000" alt="Instagram"></a></li>
             </ul>
         </div>
         <div class="footer-section">
