--- a/templates/product_details.html
+++ b/templates/product_details.html
@@ -63,7 +63,7 @@
         </div>
         <div class="row">
             <div class="col-md-6">
-                <a href="{% url 'cart' %}" class="btn btn-primary">Add to Cart</a>
+                <a href="{% url 'add_to_cart' product.id %}" class="btn btn-primary">Add to Cart</a>
             </div>
         </div>
     </div>
