--- a/templates/admin_dashboard.html
+++ b/templates/admin_dashboard.html
@@ -2,4 +2,5 @@
 
 {% block content %}
     <h1>Admin Dashboard</h1>
+    <a href="{% url 'admin_orders' %}"><button class="success">View all orders</button></a>
 {% endblock %}
