--- a/templates/admin_orders.html
+++ b/templates/admin_orders.html
@@ -1,13 +1,17 @@
 <style>
-    table{
-        margin: 20px;
-    }
-    table,th,td{
-        border: 2px solid black;
+    table {
+        width: 80%;
+        margin: 0 auto;
         border-collapse: collapse;
-        padding: 10px;
+        border: 1px solid #ccc;
     }
+    th, td {
+        padding: 8px;
+        text-align: left;
+        border: 1px solid #ccc;
+    }    
 </style>
+
 {% extends 'base.html' %}
 
 {% block content %}
