--- a/templates/checkout.html
+++ b/templates/checkout.html
@@ -1,21 +1,36 @@
+<style>
+  .container-checkout {
+    width: 50%;
+    margin: 0 auto;
+    background-color: #dde0e2;
+    border-radius: 5px;
+    padding-left: 30px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+  }
+  
+        
+</style>
+
 {% extends 'base.html' %}
 
 {% block content %}
-<div class="container">
+<div class="container-checkout">
     <h2>Checkout</h2>
   <form method="post">
     {% csrf_token %}
     {{ form.as_p }}
-    <p>Total Price: ${{ total_price }}</p>
+    <p>Total Price: ₹{{ total_price }}</p>
     <button type="submit">Place Order</button>
   </form>
   
   <h3>Cart Items:</h3>
   <ul>
     {% for item in cart_items %}
-      <li>{{ item.product.name }} - {{ item.quantity }} - ${{ item.total }}</li>
+      <li>{{ item.product.name }} - {{ item.quantity }} - ₹{{ item.total }}</li>
     {% endfor %}
   </ul>
 </div>
   
 {% endblock %}
+
