--- a/templates/product_details.html
+++ b/templates/product_details.html
@@ -13,18 +13,21 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <style>
         .product-image {
-            width: 100%; /* Ensure images fill the card */
-            height: auto; /* Maintain aspect ratio */
+            width: 100%;
+            height: 300px; /* Set a fixed height for the images */
+            object-fit: cover; /* Maintain aspect ratio while filling the specified size */
             border-radius: 5px;
         }
         .card {
-            display: flex;
             margin-bottom: 20px;
         }
-        .container{
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: space-between;
+        .container {
+            margin-top: 20px;
+        }
+        .product-info {
+            margin-top: 20px;
+        }
+        .product-details {
             margin-top: 20px;
         }
     </style>
@@ -33,9 +36,9 @@
     <div class="container">
         <h1>{{ product.name }}</h1>
         <div class="row">
-            <div class="col-md-4 mb-4">
-                <div class="card">
-                    {% for i in "123456" %}
+            {% for i in "123456"|slice:":6" %}
+                <div class="col-md-4 mb-4">
+                    <div class="card">
                         {% with image_attr="image"|add:i %}
                             {% with image_url=product|get_dynamic_attribute:image_attr %}
                                 {% if image_url %}
@@ -45,15 +48,12 @@
                                 {% endif %}
                             {% endwith %}
                         {% endwith %}
-                    {% endfor %}
-                    <div class="card-body">
-                        <h5 class="card-title">Images</h5>
                     </div>
                 </div>
-            </div>
+            {% endfor %}
         </div>
         
-        <div class="row">
+        <div class="row product-details">
             <div class="col-md-6">
                 <p><strong>Category:</strong> {{ product.category }}</p>
                 <p><strong>Price:</strong> {{ product.price }}</p>
@@ -61,7 +61,7 @@
                 <p>{{ product.description }}</p>
             </div>
         </div>
-        <div class="row">
+        <div class="row product-info">
             <div class="col-md-6">
                 <a href="{% url 'add_to_cart' product.id %}" class="btn btn-primary">Add to Cart</a>
             </div>
