--- a/templates/admin_orders_by_status.html
+++ b/templates/admin_orders_by_status.html
@@ -13,6 +13,11 @@
             padding: 20px;
             margin-bottom: 20px;
         }
+        #btn-home{
+            margin-left: 35%;
+            margin-top: 20px;
+            width: 30%;
+        }
     </style>
 </head>
 <body>
@@ -39,6 +44,9 @@
                 </div>
             </div>
             {% endfor %}
+        </div>
+        <div class="button-home">
+            <a href="{% url 'admin_home' %}"><button class="btn btn-primary" id="btn-home">Go To Home</button></a>
         </div>
     </div>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.bundle.min.js"></script>
