--- a/templates/admin_dashboard.html
+++ b/templates/admin_dashboard.html
@@ -1,6 +1,50 @@
 {% extends 'base.html' %}
 
 {% block content %}
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>About Us</title>
+    <!-- Include Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+<style>
+    .container-admin-home {
+        width: 80%;
+        margin: auto;
+        padding: 20px;
+        background-color: #f8f9fa;
+        border-radius: 10px;
+        box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
+    }
+    .img-fluid {
+        max-width: 100%;
+        height: auto;
+    }
+</style>
+</head>
+<body>
+
+
+
+<div class="container-admin-home mt-4">
     <h1>Admin Dashboard</h1>
-    <a href="{% url 'admin_orders' %}"><button class="success">View all orders</button></a>
+    <div class="row">
+        <div class="col-md-6">
+            <h2>Category-wise Sales</h2>
+            <img src="data:image/png;base64,{{ pie_data }}" alt="Category-wise Sales Pie Chart" class="img-fluid">
+        </div>
+        <div class="col-md-6">
+            <h2>Monthly Sales</h2>
+            <img src="data:image/png;base64,{{ bar_data }}" alt="Monthly Sales Bar Chart" class="img-fluid">
+        </div>
+    </div>
+    <div class="buton">
+
+        <a href="{% url 'admin_orders' %}"><button class="btn btn-success mt-4">View all orders</button></a>
+    </div>
+</div>
 {% endblock %}
+
