--- a/templates/orders.html
+++ b/templates/orders.html
@@ -7,7 +7,7 @@
         border-radius: 5px;
     }
     table{
-        width: 7    0%;
+        width: 70%;
         margin: auto;
     }
     table,th,td{
